# cdhmake

./: CMakeLists.txt  README.md
example/: project.cpp
example/src/: main.cpp
src/: build_system.cpp  build_system.h  cdhmake.cpp  cdhmake.h  data_struct.xml  main.cpp
